Run MCPC+ / Cauldron 1.6.4 servers on Java 17
- Spoof java.version on any non-Java 7 runtime to pass the MCPC+ check.
- Patch launchwrapper's Launch constructor: the app class loader is no
  longer a URLClassLoader, so build LaunchClassLoader from java.class.path
  and delegate platform-loader packages (javax.sql, javax.script...).
- Open every JDK package to unnamed modules and remove the Java 12+
  reflection filters (Field.modifiers), as on Java 8.
- Redirect sun.reflect.ReflectionFactory / ConstructorAccessor /
  FieldAccessor to shims so Forge's EnumHelper can still add enum values.
- Rename the agent to mcpc-java17-agent and require Java 17 to build.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DszbR9jSTnJF2dtbGNiQRv